# dnf_ros1

./: .gitignore  README.MD  README.md
dnf_cognitive_architecture/: CMakeLists.txt  package.xml
dnf_cognitive_architecture/scripts/: output_node.py
src/dnf_cognitive_architecture/: CMakeLists.txt  package.xml  setup.py
src/dnf_cognitive_architecture/launch/: dnf_learn.launch  dnf_learn_extended.launch  dnf_learn_vision.launch  dnf_learn_vision_speech.launch  dnf_recall.launch  dnf_recall_extended.launch  dnf_recall_speech_gripper.launch
src/dnf_cognitive_architecture/scripts/: dnf_model_learning.py  dnf_model_learning_extended.py  dnf_model_learning_speech.py  dnf_model_recall.py  dnf_model_recall_extended.py  dnf_model_recall_speech.py  dnf_model_recall_speech_gripper.py  howtorun.py  input_matrix.py  input_vision.py  mock_gripper.py  mock_speech_recognition.py  object_detector.py  object_detector_client.py  object_detector_table.py  output_node.py  output_node_extended.py  plot_field.py  plot_saved_histories.py  plot_saved_nth_histories.py
src/dnf_cognitive_architecture/scripts/utils/: .env  functions.py
