<?xml version="1.0"?>
<package format="2">
  <name>dnf_cognitive_architecture</name>
  <version>0.0.0</version>
  <description>Dynamic Neural Field architecture for cognitive modeling.</description>

  <maintainer email="w.wojtak@gmail.com">wwojtak</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>

  <test_depend>rostest</test_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
